[package]
name = "hyperliquid-rust-sdk"
version = "0.3.5"
edition = "2021"
license = "MIT"
description = "0D version of the Hyperliquid Rust SDK"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
ethers = "2.0.14"
lazy_static = "1.3"
log = "0.4.19"
rand = "0.9"
reqwest = { version = "0.12", features = [
  "json",
  "blocking",
  "stream",
  "cookies",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
thiserror = "2"
tokio = { version = "^1", features = ["full"] }
uuid = { version = "1", features = ["fast-rng", "v4", "serde"] }
alloy = { version = "1", features = ["dyn-abi", "sol-types", "signer-local"] }
